--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "build:watch": "webpack --watch"
+    "build:watch": "webpack --watch",
+    "publish": "npm run build & ts-node publish.ts"
   },
   "repository": {
     "type": "git",
@@ -29,7 +30,9 @@
     "webpack-dev-server": "^4.15.0"
   },
   "devDependencies": {
+    "@types/gh-pages": "^3.2.1",
     "@types/react-dom": "^18.2.4",
+    "gh-pages": "^5.0.0",
     "telegram-bots-webapps-types": "^1.0.8"
   }
 }
